test_data/Json/ContainedInEnvironment/Unexpected/Unserializable/InvalidModelType/DataSpecificationIec61360/invalidModelType.json.exception
Unexpected model type for IDataSpecificationContent: aCompletelyInvalidModelType at: assetAdministrationShells[0].embeddedDataSpecifications[0].dataSpecificationContent